tests/neg/recursive-type2.stk
type A = A

fun f(n: Int): A = n // error

fun g(a: A): Int = a // error
